--- a/emissions_per_kvh.ipynb
+++ b/emissions_per_kvh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "Plynové              3800.00000  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,16 +295,279 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2014</th>\n",
+       "      <th>2015</th>\n",
+       "      <th>2016</th>\n",
+       "      <th>2017</th>\n",
+       "      <th>2018</th>\n",
+       "      <th>2019</th>\n",
+       "      <th>2020</th>\n",
+       "      <th>2021</th>\n",
+       "      <th>2022</th>\n",
+       "      <th>2023</th>\n",
+       "      <th>2024</th>\n",
+       "      <th>2025</th>\n",
+       "      <th>2026</th>\n",
+       "      <th>2027</th>\n",
+       "      <th>2028</th>\n",
+       "      <th>2029</th>\n",
+       "      <th>2030</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Rok</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Jaderné (JE)</th>\n",
+       "      <td>2.444065e-08</td>\n",
+       "      <td>2.451132e-08</td>\n",
+       "      <td>2.436727e-08</td>\n",
+       "      <td>2.405398e-08</td>\n",
+       "      <td>2.404434e-08</td>\n",
+       "      <td>2.435919e-08</td>\n",
+       "      <td>2.508366e-08</td>\n",
+       "      <td>2.568541e-08</td>\n",
+       "      <td>2.577361e-08</td>\n",
+       "      <td>2.572026e-08</td>\n",
+       "      <td>2.560045e-08</td>\n",
+       "      <td>2.541603e-08</td>\n",
+       "      <td>2.516980e-08</td>\n",
+       "      <td>2.486539e-08</td>\n",
+       "      <td>2.450717e-08</td>\n",
+       "      <td>2.410003e-08</td>\n",
+       "      <td>2.364931e-08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Parní (PE)</th>\n",
+       "      <td>3.600561e-01</td>\n",
+       "      <td>3.579366e-01</td>\n",
+       "      <td>3.594147e-01</td>\n",
+       "      <td>3.621692e-01</td>\n",
+       "      <td>3.620213e-01</td>\n",
+       "      <td>3.553182e-01</td>\n",
+       "      <td>3.430042e-01</td>\n",
+       "      <td>3.326861e-01</td>\n",
+       "      <td>3.299113e-01</td>\n",
+       "      <td>3.246839e-01</td>\n",
+       "      <td>3.151975e-01</td>\n",
+       "      <td>3.015848e-01</td>\n",
+       "      <td>2.840383e-01</td>\n",
+       "      <td>2.628038e-01</td>\n",
+       "      <td>2.381716e-01</td>\n",
+       "      <td>2.104667e-01</td>\n",
+       "      <td>1.800391e-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Vodní (VE)</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Přečerpávací (PVE)</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Větrné (VTE)</th>\n",
+       "      <td>1.266608e-09</td>\n",
+       "      <td>1.288513e-09</td>\n",
+       "      <td>1.280800e-09</td>\n",
+       "      <td>1.381073e-09</td>\n",
+       "      <td>1.418592e-09</td>\n",
+       "      <td>1.540255e-09</td>\n",
+       "      <td>1.586064e-09</td>\n",
+       "      <td>1.624113e-09</td>\n",
+       "      <td>1.628108e-09</td>\n",
+       "      <td>1.665128e-09</td>\n",
+       "      <td>1.747558e-09</td>\n",
+       "      <td>1.874130e-09</td>\n",
+       "      <td>2.042930e-09</td>\n",
+       "      <td>2.251468e-09</td>\n",
+       "      <td>2.496767e-09</td>\n",
+       "      <td>2.775464e-09</td>\n",
+       "      <td>3.083921e-09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fotovoltaické (FVE)</th>\n",
+       "      <td>1.846813e-05</td>\n",
+       "      <td>1.853452e-05</td>\n",
+       "      <td>1.840266e-05</td>\n",
+       "      <td>1.817448e-05</td>\n",
+       "      <td>1.803899e-05</td>\n",
+       "      <td>1.833815e-05</td>\n",
+       "      <td>1.897890e-05</td>\n",
+       "      <td>1.951068e-05</td>\n",
+       "      <td>1.969651e-05</td>\n",
+       "      <td>2.065169e-05</td>\n",
+       "      <td>2.256084e-05</td>\n",
+       "      <td>2.539594e-05</td>\n",
+       "      <td>2.911547e-05</td>\n",
+       "      <td>3.366587e-05</td>\n",
+       "      <td>3.898347e-05</td>\n",
+       "      <td>4.499667e-05</td>\n",
+       "      <td>5.162814e-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Plynové</th>\n",
+       "      <td>1.251469e-02</td>\n",
+       "      <td>1.267777e-02</td>\n",
+       "      <td>1.270899e-02</td>\n",
+       "      <td>1.266892e-02</td>\n",
+       "      <td>1.274748e-02</td>\n",
+       "      <td>1.306654e-02</td>\n",
+       "      <td>1.359575e-02</td>\n",
+       "      <td>1.405005e-02</td>\n",
+       "      <td>1.427292e-02</td>\n",
+       "      <td>1.459934e-02</td>\n",
+       "      <td>1.508795e-02</td>\n",
+       "      <td>1.573274e-02</td>\n",
+       "      <td>1.652541e-02</td>\n",
+       "      <td>1.745572e-02</td>\n",
+       "      <td>1.851181e-02</td>\n",
+       "      <td>1.968058e-02</td>\n",
+       "      <td>2.094811e-02</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             2014          2015          2016          2017  \\\n",
+       "Rok                                                                           \n",
+       "Jaderné (JE)         2.444065e-08  2.451132e-08  2.436727e-08  2.405398e-08   \n",
+       "Parní (PE)           3.600561e-01  3.579366e-01  3.594147e-01  3.621692e-01   \n",
+       "Vodní (VE)           0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Přečerpávací (PVE)   0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Větrné (VTE)         1.266608e-09  1.288513e-09  1.280800e-09  1.381073e-09   \n",
+       "Fotovoltaické (FVE)  1.846813e-05  1.853452e-05  1.840266e-05  1.817448e-05   \n",
+       "Plynové              1.251469e-02  1.267777e-02  1.270899e-02  1.266892e-02   \n",
+       "\n",
+       "                             2018          2019          2020          2021  \\\n",
+       "Rok                                                                           \n",
+       "Jaderné (JE)         2.404434e-08  2.435919e-08  2.508366e-08  2.568541e-08   \n",
+       "Parní (PE)           3.620213e-01  3.553182e-01  3.430042e-01  3.326861e-01   \n",
+       "Vodní (VE)           0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Přečerpávací (PVE)   0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Větrné (VTE)         1.418592e-09  1.540255e-09  1.586064e-09  1.624113e-09   \n",
+       "Fotovoltaické (FVE)  1.803899e-05  1.833815e-05  1.897890e-05  1.951068e-05   \n",
+       "Plynové              1.274748e-02  1.306654e-02  1.359575e-02  1.405005e-02   \n",
+       "\n",
+       "                             2022          2023          2024          2025  \\\n",
+       "Rok                                                                           \n",
+       "Jaderné (JE)         2.577361e-08  2.572026e-08  2.560045e-08  2.541603e-08   \n",
+       "Parní (PE)           3.299113e-01  3.246839e-01  3.151975e-01  3.015848e-01   \n",
+       "Vodní (VE)           0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Přečerpávací (PVE)   0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Větrné (VTE)         1.628108e-09  1.665128e-09  1.747558e-09  1.874130e-09   \n",
+       "Fotovoltaické (FVE)  1.969651e-05  2.065169e-05  2.256084e-05  2.539594e-05   \n",
+       "Plynové              1.427292e-02  1.459934e-02  1.508795e-02  1.573274e-02   \n",
+       "\n",
+       "                             2026          2027          2028          2029  \\\n",
+       "Rok                                                                           \n",
+       "Jaderné (JE)         2.516980e-08  2.486539e-08  2.450717e-08  2.410003e-08   \n",
+       "Parní (PE)           2.840383e-01  2.628038e-01  2.381716e-01  2.104667e-01   \n",
+       "Vodní (VE)           0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Přečerpávací (PVE)   0.000000e+00  0.000000e+00  0.000000e+00  0.000000e+00   \n",
+       "Větrné (VTE)         2.042930e-09  2.251468e-09  2.496767e-09  2.775464e-09   \n",
+       "Fotovoltaické (FVE)  2.911547e-05  3.366587e-05  3.898347e-05  4.499667e-05   \n",
+       "Plynové              1.652541e-02  1.745572e-02  1.851181e-02  1.968058e-02   \n",
+       "\n",
+       "                             2030  \n",
+       "Rok                                \n",
+       "Jaderné (JE)         2.364931e-08  \n",
+       "Parní (PE)           1.800391e-01  \n",
+       "Vodní (VE)           0.000000e+00  \n",
+       "Přečerpávací (PVE)   0.000000e+00  \n",
+       "Větrné (VTE)         3.083921e-09  \n",
+       "Fotovoltaické (FVE)  5.162814e-05  \n",
+       "Plynové              2.094811e-02  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = df.multiply(emmissions_per_kwh, axis=0)"
+    "df = df.multiply(emmissions_per_kwh, axis=0)\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +593,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +614,7 @@
        "<AxesSubplot: title={'center': 'Emmissions per kwh'}>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -372,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
