car 10000 km mileage updated

--- a/WEM_generation_based_interpol.ipynb
+++ b/WEM_generation_based_interpol.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "['List1', 'List2', 'List3']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "19  7.307438e+06  "
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +607,7 @@
        "Fotovoltaické (FVE)            2.237269e+06  2.152218e+06  2.298348e+06  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        " 'Fotovoltaické (FVE)']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "Plynové (PLE)                  9.830833e+06  9.169907e+06  6.441150e+06  "
       ]
      },
-     "execution_count": 37,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
        "Plynové (PLE)        6.441150e+06  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1293,7 +1293,7 @@
        "Plynové (PLE)        6.441150e+06   NaN   NaN   NaN   NaN   NaN   NaN   NaN  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1555,7 +1555,7 @@
        "Plynové (PLE)        1.466742e+07  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1835,7 +1835,7 @@
        "Plynové (PLE)        1.466742e+07  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1856,7 +1856,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1873,6 +1873,15 @@
    ],
    "source": [
     "df_interpolated.transpose().plot(figsize=(10, 8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_interpolated.to_csv(\"Interpolated Production Based Energy Mix.csv\", index=True)"
    ]
   }
  ],
