--- a/WAM3_cars_for_viz.ipynb
+++ b/WAM3_cars_for_viz.ipynb
@@ -10,7 +10,9 @@
     "\n",
     "df_10000 = pd.read_csv(\"WAM3_car_emissions_10000.csv\")\n",
     "df_15000 = pd.read_csv(\"WAM3_car_emissions_15000.csv\")\n",
-    "df_20000 = pd.read_csv(\"WAM3_car_emissions_20000.csv\")"
+    "df_20000 = pd.read_csv(\"WAM3_car_emissions_20000.csv\")\n",
+    "df_25000 = pd.read_csv(\"WAM3_car_emissions_25000.csv\")\n",
+    "df_30000 = pd.read_csv(\"WAM3_car_emissions_30000.csv\")"
    ]
   },
   {
@@ -21,7 +23,9 @@
    "source": [
     "df_10000[\"Roční_nájezd\"] = 10000\n",
     "df_15000[\"Roční_nájezd\"] = 15000\n",
-    "df_20000[\"Roční_nájezd\"] = 20000"
+    "df_20000[\"Roční_nájezd\"] = 20000\n",
+    "df_25000[\"Roční_nájezd\"] = 25000\n",
+    "df_30000[\"Roční_nájezd\"] = 30000"
    ]
   },
   {
@@ -30,7 +34,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_combined = pd.concat([df_10000, df_15000, df_20000], ignore_index=True)"
+    "df_combined = pd.concat(\n",
+    "    [df_10000, df_15000, df_20000, df_25000, df_30000], ignore_index=True\n",
+    ")"
    ]
   },
   {
